crates/pixi_cli/src/workspace/export/snapshots/pixi_cli__workspace__export__conda_environment__tests__test_export_conda_env_yaml_with_pip_custom_registry.snap
---
source: crates/pixi_cli/src/workspace/export/conda_environment.rs
expression: env_yaml.unwrap().to_yaml_string()
---
name: alternative
channels:
- conda-forge
- nodefaults
dependencies:
- python ==3.12
- pip
- pip:
  - --index-url https://pypi.tuna.tsinghua.edu.cn/simple/
  - flask==3.0.3
